test/tests/bad/inexhaustive-pats.carth
;; InexhaustivePats

(define foo (fmatch (case True 0)))
